Fix toaster layout to render visibly on scrolled pages

--- a/packages/admin/src/blueprint.scss
+++ b/packages/admin/src/blueprint.scss
@@ -57,6 +57,7 @@ $orange3: #ffdf75;
 
 .blueprint-toaster {
   z-index: 5000 !important;
+  position: fixed !important;
 }
 
 .bp3-toast-container {
