--- a/packages/client/src/blueprint.scss
+++ b/packages/client/src/blueprint.scss
@@ -53,6 +53,7 @@ $orange3: #ffdf75;
 
 .blueprint-toaster {
   z-index: 5000 !important;
+  position: fixed !important;
 }
 
 .bp3-toast-container,
